# scientific-vis

./: README.md
differencer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  differencer.cxx
marching_cubes_linux/: CMakeLists.txt  Makefile  isosurface_parallel.cxx  isosurface_prefix.cxx  main.cxx  render_surface.cxx
marching_cubes_osx/: CMakeLists.txt  README.txt  isosurface.cl  isosurface_parallel.cxx  main.cxx  steps.txt  tricase.cxx  tricase.h
p1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj1
p2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj2  proj2.cxx
p3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  differencer  proj3  proj3.cxx
p4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj4  proj4.cxx
p4G/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj4G  proj4G.cxx  proj_4G.py
p5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj5  proj5.cxx  tmp
p6/mc510/.svn/: wc.db
p7/: CMakeCache.txt  CMakeLists.txt  Makefile  TriangleList.h  cmake_install.cmake  proj7  proj7.cxx  proj7_outputs.cxx
p8/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj8  proj8.cxx
ray_casting/: CMakeCache.txt  CMakeLists.txt  Makefile  astro.cxx  cmake_install.cmake
ray_casting/old/: astro_unfused.cxx  astro_unoptimized.cxx
